navbar - overflow fix 1

--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -80,7 +80,9 @@ nav {
 
 @media screen and (max-width: 900px) {
     html, body {
+        overflow: hidden;
         overflow-x: hidden;
+        overflow-y: hidden;
     }
 
     .nav-links {
@@ -95,7 +97,9 @@ nav {
         width: 100%;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
-        overflow-x:hidden;
+        overflow-x: hidden;
+        overflow-y: hidden;
+        overflow: hidden;
     }
 
     .nav-links li {
